# juliet-cli

./: .gitignore  README.md  app.py  main.py  pyproject.toml  test.py  todos.yaml  tui.py
iso-template/: instructions.yaml  params_config.yaml
isos/clappy/: instructions.yaml
isos/juliet/: instructions.yaml
isos/moriarty/: instructions.yaml
isos/sherlock/: instructions.yaml
src/: adapters.py  clients.py  context.py  extract_docs.py  fact_store.py  files_handler.py  instructions.py  iso.py  messages.py  todos.py
templates/: prompt_template.md
