[project]
name = "juliet-cli"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.4.0",
    "ebooklib>=0.20",
    "fastapi>=0.128.0",
    "openai>=2.14.0",
    "pydantic>=2.12.5",
    "pymupdf>=1.26.7",
    "python-dotenv>=1.2.1",
    "pyyaml>=6.0.3",
    "sentence-transformers>=5.2.0",
    "textual>=7.0.1",
    "uvicorn>=0.40.0",
]

